...
                    artboard: 'HOME',
                    animations: ['active', 'idle'],
                    fit: BoxFit.fitHeight,
                    controllers: [_btnHomeAnimationController],
                  ),
                ),
                label: 'Home',
              ),
              NavigationDestination(
                icon: SizedBox(
                  height: 35,
                  child: RiveAnimation.asset(
                    'assets/icons.riv',
...
              );
            },
          ),
          ListTile(
            leading: const Icon(Icons.query_stats),
            title: Text(
              'Statistics',
              style: getTitleText(
                context.read<SettingsCubit>().state.textSize,
                context,
              ),
            ),
            onTap: () {
...
