...
          ),
          onPressed: _stubMethod,
          tooltip: 'Open Menu',
        ),
        centerTitle: true,
        title: RichText(
          text: TextSpan(
            children: [
              TextSpan(text: widget.title),
              WidgetSpan(
                child: Container(
                  child: const Text('🏡'),
                  padding: const EdgeInsets.only(left: 8),
...
        items: const <BottomNavigationBarItem>[
          BottomNavigationBarItem(
            icon: Icon(
              Icons.book,
              size: 30,
            ),
            label: 'Home',
          ),
          BottomNavigationBarItem(
            icon: Icon(
              Icons.assignment,
              size: 30,
            ),
...
