import 'dart:core';

abstract class Routes {
  static const String home = 'home';
  static const String daily = 'daily';
  static const String timeline = 'timeline';
  static const String explore = 'explore';

  static const String search = 'search';
  static const String notification = 'notification';
  static const String statistics = 'statistics';
  static const String settings = 'settings';

  static const String bot = 'bot';
}
